# FontMuse

./: .gitignore  LICENSE  README.md  build-guide.md  build-release.ps1  build-release.sh  package.json  pnpm-lock.yaml  quick-build-guide.md
.github/workflows/: release.yml
app/: layout.tsx  page.tsx
components/: Controls.tsx  FontGrid.tsx  FontPreview.tsx  LanguageSwitcher.tsx  ThemeToggle.tsx
components/providers/: I18nProvider.tsx  Providers.tsx  ThemeProvider.tsx
lib/: i18n.ts
lib/theme/: types.ts  utils.ts
locales/: en.json  ru.json
scripts/: package-release.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.portable.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
styles/: globals.css  theme.css
types/: index.ts
