[package]
name = "FontMuse"
version = "0.1.0"
description = "Font Preview Application"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = [] }
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"
windows = { version = "0.48", features = [
    "Win32_System_DataExchange",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
