[package]
name = "fontmuse"
version = "0.1.0"
description = "Modern font preview application"
authors = ["DMD"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_DataExchange",
    "Win32_Foundation", 
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Optimize for release builds
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
